# necrolog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bar.cpp  bar.h  flake.nix  foo.cpp  foo.h  necro-test.cpp  necro-test.pro  necrolog.h  necrolog.pc.in  necrolog.pro  subproject_integration.pri
.github/actions/build-and-test/: action.yml
.github/actions/cmake/: action.yml
.github/actions/run-linter/: action.yml
.github/workflows/: lint.yml  test.yml
examples/: log_example.cpp
include/: necrolog.h  necrologlevel.h
libnecrolog/: libnecrolog-quickbox.pro  libnecrolog.pro  necrolog.cpp  necrolog.h  necrologglobal.h  necrologlevel.h
tests/: necro-test.cpp  test_necrolog.cpp  tests.pro
